--- a/360v6.config
+++ b/360v6.config
@@ -72,7 +72,8 @@ CONFIG_TARGET_PROFILE="DEVICE_qihoo_360v6"
 CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"
 CONFIG_CPU_TYPE="cortex-a53"
-CONFIG_LINUX_6_1=y
+# CONFIG_LINUX_6_1 is not set
+CONFIG_LINUX_5_4=y
 CONFIG_DEFAULT_ath11k-firmware-ipq6018=y
 CONFIG_DEFAULT_autocore-arm=y
 CONFIG_DEFAULT_base-files=y
