Update and rename 360v6.yml to aiamadeus-360v6-lede.yml

--- a/.github/workflows/aiamadeus-360v6-lede.yml
+++ b/.github/workflows/aiamadeus-360v6-lede.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt
+name: aiamadeus-360v6-lede
 
 on:
   repository_dispatch:
