--- a/.github/workflows/OpenWrt-IPQ60XX-360V6.yml
+++ b/.github/workflows/OpenWrt-IPQ60XX-360V6.yml
@@ -22,7 +22,7 @@ env:
   ENCODE_FILES: ${{ secrets.ENCODE_FILES }}
   PASSWORD: ${{ secrets.PASSWORD }}
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: 360v6.config
+  CONFIG_FILE: yu-v6.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   CLASH_KERNEL: amd64
