--- a/.github/workflows/aiamadeus-360v6-lede.yml
+++ b/.github/workflows/aiamadeus-360v6-lede.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/gw826943555/openwrt
-  REPO_BRANCH: ipq60xx-5.15
+  REPO_URL: https://github.com/w2xg2022/ax18usb
+  REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: 360v6.config
   DIY_P1_SH: diy-part1.sh
